--- a/cibuildwheel/resources/defaults.toml
+++ b/cibuildwheel/resources/defaults.toml
@@ -23,6 +23,7 @@ oci-exe = "docker"
 oci-extra-args-common = ""
 oci-extra-args-create = ""
 oci-extra-args-start = ""
+oci-sleep-time = ""
 
 manylinux-x86_64-image = "manylinux2014"
 manylinux-i686-image = "manylinux2014"
