--- a/cibuildwheel/resources/defaults.toml
+++ b/cibuildwheel/resources/defaults.toml
@@ -19,7 +19,7 @@ before-test = ""
 test-requires = []
 test-extras = []
 
-oci-exe = "docker"
+container-engine = "docker"
 
 manylinux-x86_64-image = "manylinux2014"
 manylinux-i686-image = "manylinux2014"
